--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
             android:label="Start Activity" >
         </activity>
         <activity android:name=".HistoryActivity"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
             />
     </application>
 
